Add warning comment about rickrolling
Added a comment to indicate a warning against rickrolling.

--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@ search.addEventListener("input", () => {
   });
 });
 
+/// dont rickroll people flop
+
 // ENTER key logic for admin
 search.addEventListener("keydown", (e) => {
   const value = search.value.toLowerCase();
