Add Slice Master game card to index.html

--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@ p.header-sub{text-align:center;opacity:.75;margin-bottom:20px;}
   <span class="star">★</span>
 </a>
 
+<a class="game-card" href="https://codingiscool464.github.io/SliceMaster/" target="_blank">
+  <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/slice-master.png');"></div>
+  <div class="game-info"><h2>Slice Master</h2><p>Satisfying • Fruit • Timing</p></div>
+  <span class="star">★</span>
+</a>
+  
 <a class="game-card" href="https://codingiscool464.github.io/slope/" target="_blank">
   <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1240.png');"></div>
   <div class="game-info"><h2>Slope</h2><p>Fast • Reaction • Skill</p></div>
