Remove Level Devil card and update Monkey Mart image
Removed Level Devil game card and updated Monkey Mart image URL.

--- a/index.html
+++ b/index.html
@@ -209,16 +209,10 @@
         <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1235.webp');"></div>
         <div class="game-info"><h2>FNAF 4</h2><p>Horror • Nightmare</p></div>
       </a>
-      
-       <!-- L -->
-      <a class="game-card" href="https://codingiscool464.github.io/leveldevil/" target="_blank">
-        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/level%20devil.png');"></div>
-        <div class="game-info"><h2>Level Devil</h2><p>Precision • 2D</p></div>
-      </a>
 
       <!-- M -->
       <a class="game-card" href="https://codingiscool464.github.io/MonkeyMart/" target="_blank">
-        <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/refs/heads/main/IMG_1234.jpeg');"></div>
+        <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1234.jpeg?raw=true');"></div>
         <div class="game-info"><h2>Monkey Mart</h2><p>Shopping • Fun</p></div>
       </a>
 
