--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ body{
   min-height:100vh;
   padding:40px 20px;
   position:relative;
+  transition:background 1s ease, color 1s ease;
 }
 .container{width:100%;max-width:800px;animation:fadeIn 0.8s ease;}
 .top-button {
@@ -99,6 +100,16 @@ p.header-sub{text-align:center;opacity:.75;margin-bottom:20px;}
 @keyframes fall {
   0% { transform: translateY(0); opacity: 1; }
   100% { transform: translateY(100vh); opacity: 0; }
+}
+
+/* --- Winter Mode Colors --- */
+body.winter {
+  --bg: #0a1a2f;          /* deep winter navy */
+  --card-bg: #132b4a;     /* frosty blue-gray for cards */
+  --card-hover: #1c3b63;  /* lighter icy hover effect */
+  --accent: #4fc3f7;      /* bright ice-blue accent */
+  --text: #e0f7fa;        /* soft snow-white text */
+  --subtitle: #b3e5fc;    /* pale blue subtitles */
 }
 </style>
 </head>
@@ -329,12 +340,14 @@ function createSnowflake() {
 function startSnow() {
   if (!snowInterval) {
     snowInterval = setInterval(createSnowflake, 300); // every 300ms
+    document.body.classList.add("winter"); // activate winter colors
   }
 }
 
 function stopSnow() {
   clearInterval(snowInterval);
   snowInterval = null;
+  document.body.classList.remove("winter"); // revert to normal colors
 }
 
 function checkTime() {
